--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Whats-Bot",
+  "name": "Magic-Speel-Ultra",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/AiDarkEzio/Whats-Bot.gitv",
-  "logo": "https://telegra.ph/file/4c2c0174e86ac3bac2ba8.jpg",
+  "logo": "https://telegra.ph/file/c866e7c968a3249e5b1c2.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
